# code

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  demonstrate_system.py  install.ps1  install.sh  pyproject.toml  requirements.txt  start_webui.py  start_webui.sh  test_evolution_system.py  test_installation.py  test_usage_tracker_simple.py  test_webui.py
.github/workflows/: ci.yml  release.yml
core/: auto_optimizer.py  demand_analyzer.py  feedback_learner.py  ml_predictor.py  new_function_creator.py  real_time_monitor.py  usage_tracker.py
docs/: API.md  USAGE.md
qtassist_self_evolution/: __init__.py  cli.py  config.py
qtassist_self_evolution/core/: __init__.py  auto_search_installer.py  database_manager.py  evolution_controller.py  real_time_monitor.py
qtassist_self_evolution/webui/: __init__.py  app.py
qtassist_self_evolution/webui/static/css/: tradingview.css
qtassist_self_evolution/webui/static/js/: dashboard.js
qtassist_self_evolution/webui/templates/: index.html
skills/: README.md  __init__.py  mcp_server.py  qtassist_self_evolution_skill.json  qtassist_skill.yaml  skill_sdk.py
webui/: app.py
webui/static/css/: style.css
webui/static/js/: dashboard.js
webui/templates/: index.html
